--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "sugoku",
-    "slug": "sugoku",
+    "name": "Jarooda-Sudokuuu",
+    "slug": "jaroodasugoku",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -27,6 +27,7 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "description": "Sudoku Mobile App built with React-Native with public API sugoku"
   }
 }
